Creacion de la master password

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,2 +1,4 @@
 [options]
 addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
+admin_passwd = $pbkdf2-sha512$600000$xniPUUopJeQcY8x5DyEE4A$lIuk7JY6D2y2kYNntvyb2xLQV3nZFEJy6AzSSYSasKf914NLf8b/W8.ErTtqpqopgshqKc4jIQsqrJye7ilM.w
+
