subiendo modulo de citas

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,2 +1,4 @@
 [options]
 addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
+admin_passwd = $pbkdf2-sha512$600000$fe.911oLQQhBCEGI0XrvfQ$DChqfocJRvG6h4ZiKJG2GoCZbrKG7vBzoVVpIMfxiKdLABjfJ5W.ll19/4rPJE40dc/v.G8pBkRXPSk4ojtqpg
+
